Fixed Video Alignment
made the video and overlay fit the screen properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,35 +72,32 @@ footer a:hover {
 
 /* Styles for the video & text */
 #myVideo {
-    position: fixed;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    min-height: 100%;
-	z-index: -1;
-  }
-  
-  .video-container{
-    position:relative;
-    width:100%;
-    height:100%;
-    overflow:hidden;
-  }
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+  object-fit:contain;
+}
 
-  .video-container video{
-    width: auto;
-    height:auto;
-  }
+.video-container{
+  position:relative;
+  width:100vw;
+  height:100vh;
+  overflow:hidden;
+}
 
-  #overlay {
-    position: absolute;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-    width: 100%;
-    height:100%;
-	z-index: 1;
-  font-family: "Red Hat Display";
-  }
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100vh;
+}
 
   #inner {
     position: absolute;
